k8s/ui_deployment.yaml
# ------------- Deployment --------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-deployment
  namespace: zebraflights          # <-- same namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
        - name: ui
          image: ui:latest     # <-- put your real image name
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          env:                          # inject MODEL_ENDPOINT from ConfigMap
            - name: MODEL_ENDPOINT
              valueFrom:
                configMapKeyRef:
                  name: ui-config       # ConfigMap name
                  key: MODEL_ENDPOINT   # key inside ConfigMap
