k8s/data_preprocessing_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-preprocessing
  namespace: zebraflights
  labels:
    app: data-preprocessing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-preprocessing
  template:
    metadata:
      labels:
        app: data-preprocessing
    spec:
      containers:
        - name: data-preprocessing
          image: preprocess:latest
          imagePullPolicy: IfNotPresent   # ✅ use local image if available
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: shared-data
              mountPath: /data
      volumes:
        - name: shared-data
          persistentVolumeClaim:
            claimName: shared-data-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: preprocess-service
  namespace: zebraflights
spec:
  selector:
    app: data-preprocessing
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
