k8s/data_preprocessing_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: preprocess-service
  namespace: zebraflights
spec:
  selector:
    app: data-preprocessing
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
