k8s/model_inference_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: model-inference
  namespace: zebraflights   
  labels:
    app: model-inference
spec:
  type: ClusterIP
  selector:
    app: model-inference
  ports:
    - name: http
      port: 5002
      targetPort: 5002
      protocol: TCP
