k8s/model_training_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-training
  namespace: zebraflights
  labels:
    app: model-training
spec:
  replicas: 1
  selector:
    matchLabels:
      app: model-training
  template:
    metadata:
      labels:
        app: model-training
    spec:
      containers:
        - name: model-training
          image: training:latest
          imagePullPolicy: IfNotPresent  
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: shared-data
              mountPath: /data
      volumes:
        - name: shared-data
          persistentVolumeClaim:
            claimName: shared-data-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: training-service
  namespace: zebraflights
spec:
  selector:
    app: model-training
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
