k8s/model_training_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: training-service
  namespace: zebraflights
spec:
  selector:
    app: model-training
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
